@@ -1,5 +1,5 @@
 <window type="dialog" id="134">
-	<defaultcontrol always="true">450</defaultcontrol>
+	<defaultcontrol>450</defaultcontrol>
 	<backgroundcolor>0</backgroundcolor>
 	<controls>
 		<include>fadebackground</include>
