@@ -18,11 +18,11 @@
 			<pagecontrol>27</pagecontrol>
 			<itemlayout height="50">
 				<control type="image">
-					<posx>0</posx>
-					<posy>5</posy>
-					<width>42</width>
-					<height>30</height>
-					<texture>$INFO[ListItem.Overlay]</texture>
+					<posx>10</posx>
+					<posy>8</posy>
+					<width>32</width>
+					<height>32</height>
+					<texture>$VAR[Overlay]</texture>
 					<visible>Skin.HasSetting(watched-overlay)</visible>
 				</control>
 				<control type="label">
@@ -41,11 +41,11 @@
 			</itemlayout>
 			<focusedlayout height="50">
 				<control type="image">
-					<posx>0</posx>
-					<posy>5</posy>
-					<width>42</width>
-					<height>30</height>
-					<info>ListItem.Overlay</info>
+					<posx>10</posx>
+					<posy>8</posy>
+					<width>32</width>
+					<height>32</height>
+					<texture>$VAR[Overlay]</texture>
 					<visible>Skin.HasSetting(watched-overlay)</visible>
 				</control>
 				<control type="label">
