@@ -52,7 +52,7 @@
 					<posy>320</posy>
 					<height>18</height>
 					<width>26</width>
-					<info>ListItem.Overlay</info>
+					<texture>$VAR[Overlay]</texture>
 					<colordiffuse>UnFocusedCovers</colordiffuse>
 					<visible>Skin.HasSetting(watched-overlay)</visible>
 				</control>
@@ -96,11 +96,11 @@
 					<visible>!SubString(ListItem.Icon,DefaultFolder.png,Left)</visible>
 				</control>
 				<control type="image">
-					<posx>10</posx>
-					<posy>80</posy>
+					<posx>430</posx>
+					<posy>140</posy>
 					<height>48</height>
-					<width>69</width>
-					<info>ListItem.Overlay</info>
+					<width>48</width>
+					<texture>$VAR[Overlay]</texture>
 					<visible>Skin.HasSetting(watched-overlay)</visible>
 				</control>
 			</focusedlayout>
